# order_manager

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/models/: line_item.rs  mod.rs  order.rs
src/oracle_client/: mod.rs
src/order_manager/: Detail.sql  mod.rs  procedure.sql
src/sql/: create_detail_record.sql  create_master_record.sql  get_correct_store_id.sql  get_last_master_record_id.sql  update_total_discount.sql
src/webhook_server/: mod.rs  routes.rs
