[package]
name = "order_manager"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Urabi"]
description = "An actix web server that manager shopify orders through webhooks and creates them in an Oracle database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
axum = "0.6"
chrono = "0.4.35"
dotenv = "0.15.0"
ngrok = { version = "0.13.1", features = ["hyper", "axum"] }
oracle = "0.5.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread", "macros"] }
